Closed
Bug 1227666
Opened 10 years ago
Closed 10 years ago
[e10s] Flash Player content appears on top of web pages when I switch from one page to another
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(e10sm8+, firefox44+ fixed, firefox45 fixed, b2g-v2.5 fixed)
VERIFIED
FIXED
mozilla45
People
(Reporter: arni2033, Assigned: jimm)
References
()
Details
Attachments
(2 files, 1 obsolete file)
>>> My Info: Win7_64, Nightly 45, 32bit, ID 20151120030227
STR:
1. Open about:addons, set Flash to "Always activate"
2. Open "testcase 1" in a new window
3. Open https://yandex.ru/search/?text=asdf in another tab in that window
4. If flash isn't working on that site, click plugin icon in urlbar, then click "Allow and remember"
5. Switch to the tab from Step 2
6. Switch to the tab from Step 3
Result:
Flash content appears on top of "yandex.ru"
Expectations:
Flash content should hide when I switch to another tab
I'm not sure whether I should set this keyword, but content on "yandex.ru" site seems unstable.
When I save the page with search results, replace some links from [src="//...something"] to [src="https://...something"], open saved page in the browser and disable JS in devtools, it exposes the same issue. But that seems unreliable to me, because if I copy-paste the same .html file and open it in browser, it does not expose the issue.
Keywords: testcase-wanted
| Assignee | ||
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
Flags: needinfo?
| Assignee | ||
Comment 3•10 years ago
|
||
hmph, today I can't reproduce.
| Assignee | ||
Updated•10 years ago
|
| Assignee | ||
Updated•10 years ago
|
(In reply to Jim Mathies [:jimm] from comment #3)
> hmph, today I can't reproduce.
Do you mean that you managed to do that earlier? Try refreshing the yandex page with Ctrl+Shift+R
I just reproduced it on a clear profile on latest Nightly using old testcase and yandex page.
| Assignee | ||
Comment 5•10 years ago
|
||
This seems somewhat random. Sometimes I see it sometimes I don't. So fare only in a nightly build, I haven't had any luck reproducing in a local build.
| Assignee | ||
Comment 6•10 years ago
|
||
(In reply to arni2033 from comment #4)
> (In reply to Jim Mathies [:jimm] from comment #3)
> > hmph, today I can't reproduce.
> Do you mean that you managed to do that earlier? Try refreshing the yandex
> page with Ctrl+Shift+R
> I just reproduced it on a clear profile on latest Nightly using old testcase
> and yandex page.
I'm testing using your data url and this bug page. I'll try the yandex page.
| Assignee | ||
Comment 7•10 years ago
|
||
ok, I have this reproducing in a local build now.
| Assignee | ||
Updated•10 years ago
|
Keywords: testcase-wanted
| Assignee | ||
Comment 9•10 years ago
|
||
Bug 1227666 - Insure that cached plugin geometry configuration cached in ShadowLayerForwarder gets cleared when we reflow and new content has no plugins. r?roc
Attachment #8692072 -
Flags: review?(roc)
| Assignee | ||
Comment 10•10 years ago
|
||
mPluginWindowData needs to be cleared when content reflows and there are no plugins in the page. Otherwise that cache sticks around, and we can get window id collisions in the cached data with new plugins that get created. The yandex content is good at triggering this because it quickly creates and destroys plugins early during page load.
| Assignee | ||
Comment 11•10 years ago
|
||
Comment on attachment 8692072 [details]
MozReview Request: Bug 1227666 - Insure that cached plugin geometry configuration cached in ShadowLayerForwarder gets cleared when we reflow and new content has no plugins. r?roc
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/26223/diff/1-2/
| Assignee | ||
Comment 12•10 years ago
|
||
(In reply to Jim Mathies [:jimm] from comment #11)
> Comment on attachment 8692072 [details]
> MozReview Request: Bug 1227666 - Insure that cached plugin geometry
> configuration cached in ShadowLayerForwarder gets cleared when we reflow and
> new content has no plugins. r?roc
>
> Review request updated; see interdiff:
> https://reviewboard.mozilla.org/r/26223/diff/1-2/
^ comment update
Comment on attachment 8692072 [details]
MozReview Request: Bug 1227666 - Insure that cached plugin geometry configuration cached in ShadowLayerForwarder gets cleared when we reflow and new content has no plugins. r?roc
https://reviewboard.mozilla.org/r/26223/#review23633
Attachment #8692072 -
Flags: review?(roc) → review+
Comment 16•10 years ago
|
||
Keywords: checkin-needed
Comment 17•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
| Assignee | ||
Comment 18•10 years ago
|
||
Comment on attachment 8692072 [details]
MozReview Request: Bug 1227666 - Insure that cached plugin geometry configuration cached in ShadowLayerForwarder gets cleared when we reflow and new content has no plugins. r?roc
Approval Request Comment
[Feature/regressing bug #]:
plugin related
[User impact if declined]:
serious tab switching bug related to windowed plugins - when switching tabs some plugin windows may 'stick around' after the tab switch.
[Describe test coverage new/current, TreeHerder]:
just landed on mc.
[Risks and why]:
very low, well understood area of the code, well understood cause.
[String/UUID change made/needed]:
none
Attachment #8692072 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Updated•10 years ago
|
Attachment #8692072 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Updated•10 years ago
|
Attachment #8692072 -
Flags: approval-mozilla-aurora?
Comment 19•10 years ago
|
||
arni2033, could you please verify that this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(arni2033)
tracking-firefox44:
--- → +
Comment 20•10 years ago
|
||
Comment on attachment 8692072 [details]
MozReview Request: Bug 1227666 - Insure that cached plugin geometry configuration cached in ShadowLayerForwarder gets cleared when we reflow and new content has no plugins. r?roc
Serious regression and fix has been on Nightly for a few days, seems safe to uplift to Aurora44.
Attachment #8692072 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 21•10 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 22•10 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #19)
> arni2033, could you please verify that this issue is fixed as expected on a latest Nightly build?
Yes, I don't see this happening with normal tab switching.
>>> My Info: Win7_64, Nightly 45, 32bit, ID 20151201030226
However, sometimes plugins are displayed on top of wrong web pages if I switch tabs fast enough.
I filed bug 1229429. That happens to all pages, not only yandex, so I think that's a different case.
And probably the work in this bug was useless :( I hope it's not.
Flags: needinfo?(arni2033)
Comment 23•10 years ago
|
||
(In reply to arni2033 from comment #22)
> (In reply to Ritu Kothari (:ritu) from comment #19)
> > arni2033, could you please verify that this issue is fixed as expected on a latest Nightly build?
> Yes, I don't see this happening with normal tab switching.
> >>> My Info: Win7_64, Nightly 45, 32bit, ID 20151201030226
>
> However, sometimes plugins are displayed on top of wrong web pages if I
> switch tabs fast enough.
> I filed bug 1229429. That happens to all pages, not only yandex, so I think
> that's a different case.
> And probably the work in this bug was useless :( I hope it's not.
Thanks for the verification and I see that e10s team has triaged bug 1229429 and will hopefully have a fix ready soon.
Status: RESOLVED → VERIFIED
Comment 24•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
| Assignee | ||
Updated•10 years ago
|
Attachment #8692072 -
Attachment is obsolete: true
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•